k8s/kotlin-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotlin-backend
  labels:
    app: kotlin-backend
    app.kubernetes.io/name: kotlin-backend
    app.kubernetes.io/version: "0.0.1-SNAPSHOT"
    app.kubernetes.io/component: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kotlin-backend
  template:
    metadata:
      labels:
        app: kotlin-backend
    spec:
      containers:
        - image: europe-west4-docker.pkg.dev/operationalexcellence-439615/operational-excellence/kotlin-backend:0.0.1-SNAPSHOT
          name: kotlin-backend
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "0.25"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /kotlin-backend/actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /kotlin-backend/actuator/health/liveness
              port: http
            initialDelaySeconds: 20
            failureThreshold: 5
          ports:
            - name: http
              containerPort: 9001
