k8s/persistence-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence-service
  labels:
    app: persistence-service
    app.kubernetes.io/name: persistence-service
    app.kubernetes.io/version: "0.0.1-SNAPSHOT"
    app.kubernetes.io/component: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: persistence-service
  template:
    metadata:
      labels:
        app: persistence-service
    spec:
      containers:
        - image: europe-west4-docker.pkg.dev/operationalexcellence-439615/operational-excellence/persistence-service:0.0.1-SNAPSHOT
          name: persistence-service
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "1.0"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 20
            failureThreshold: 5
          ports:
            - name: http
              containerPort: 1337
