k8s/dotnet-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnet-backend
  name: dotnet-backend
spec:
  type: LoadBalancer
  selector:
    app: dotnet-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
