k8s/kotlin-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kotlin-backend
  name: kotlin-backend
spec:
  type: NodePort
  selector:
    app: kotlin-backend
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
