k8s/persistence-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: persistence-service
  name: persistence-service
spec:
  type: LoadBalancer
  selector:
    app: persistence-service
  ports:
    - name: http
      protocol: TCP
      port: 1337
      targetPort: 1337
